derive/tests/ui/nonexistant_trait.stderr
error: `From<Foo<qq, bb>>` does not name a trait that can be derived
 --> tests/ui/nonexistant_trait.rs:5:22
  |
5 |     #[indexland(omit(From<Foo<qq, bb>>))]
  |                      ^^^^^^^^^^^^^^^^^
